--- a/css/study.css
+++ b/css/study.css
@@ -505,8 +505,8 @@ button:disabled {
 
 @media (min-width: 700px) {
     .app-container {
-        width: min(94vw, 880px);
-        max-width: 880px;
+        width: min(94vw, 680px);
+        max-width: 680px;
     }
 
     .app-container > .p-6 {
